# tiff2jpeg

./: CMakeLists.txt  README.md  config.h.in  main.cpp  metadata.cpp  metadata.h  tiff2jpeg.cpp  tiff2jpeg.h
